--- a/A_django_intro/templates/base.html
+++ b/A_django_intro/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -5,6 +6,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{% block page_title %}{% endblock %}</title>
+		{% block app_css_file %}
+		{% endblock  %}
+		<link rel="stylesheet" href="{% static 'css/global.css' %}">
 	</head>
 	<body>
 		{% block content %}{% endblock content %}
