genericview: listview and detail view

--- a/E_django_ClassViews/list_detail_view/templates/list_detail_view/detail.html
+++ b/E_django_ClassViews/list_detail_view/templates/list_detail_view/detail.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>{{data.name}}</h1>
-	<p>{{data.email}}</p>
+	<h1>{{item.name}}</h1>
+	<p>{{item.email}}</p>
 </body>
 </html>
