--- a/01_templates/templates/_base.html
+++ b/01_templates/templates/_base.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{% block page_title %}Django + HTMX + Tailwind CSS{% endblock page_title %}</title>
+		<title>{% block page_title %}Django + Tailwind CSS + HTMX{% endblock page_title %}</title>
 
 		{% compress css %}
 		<link rel="stylesheet" href="{% static 'src/output.css' %}" />
