--- a/01_templates/templates/_base.html
+++ b/01_templates/templates/_base.html
@@ -7,11 +7,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{% block page_title %}Django + Tailwind CSS + HTMX{% endblock page_title %}</title>
-
 		{% compress css %}
 		<link rel="stylesheet" href="{% static 'src/output.css' %}" />
+		{% endcompress %}
 		<!-- HTMX start -->
-		{% endcompress %} {% compress js %}
+		{% compress js %}
 		<script type="text/javascript" src="{% static 'src/htmx.js' %}"></script>
 		{% endcompress %}
 		<!-- HTMX end-->
