--- a/01_templates/templates/index.html
+++ b/01_templates/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %} {% block content %}
 <main class="flex flex-col items-center justify-center min-h-screen">
-	<h1 class="text-3xl text-green-800">Django + Tailwind CSS + HTMX</h1>
+	<h1 class="text-3xl text-green-800">Django + Tailwind CSS + HTMX + others.</h1>
 	<a href="{% url 'todos' %}" class="underline">Go to todos</a>
 </main>
 {% endblock content %}
