--- a/B_django_ORM/templates/index.html
+++ b/B_django_ORM/templates/index.html
@@ -1,7 +1,5 @@
-{% extends "_base.html" %}
-<!--  -->
-{% block content %}
+{% extends "_base.html" %} {% block content %}
 <main class="flex flex-col items-center justify-center min-h-screen">
-	<h1 class="text-3xl text-green-800">Django + Tailwind CSS + HTMX + others.</h1>
+	<h1 class="text-3xl text-green-800 font-bold">Django + Tailwind CSS + HTMX + others.</h1>
 </main>
 {% endblock content %}
