--- a/B_django_ORM/templates/_base.html
+++ b/B_django_ORM/templates/_base.html
@@ -6,9 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>
-			{% block page_title %}Django + Tailwind CSS + HTMX{% endblock page_title %}
-		</title>
+		<title>{% block page_title %}Django + Tailwind CSS + HTMX{% endblock page_title %}</title>
 		{% compress css %}
 		<link rel="stylesheet" href="{% static 'src/output.css' %}" />
 		{% endcompress %}
@@ -19,7 +17,6 @@
 		<!-- HTMX end-->
 	</head>
 	<body>
-		{% include 'includes/nav/main_nav.html' %}
 		{% block content %} {% endblock content %}
 		<!-- HTMX start -->
 
