--- a/01_templates/static/src/input.css
+++ b/01_templates/static/src/input.css
@@ -1,3 +1,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	input[type='text'],
+	input[type='password'],
+	input[type='email'],
+	input[type='number'],
+	input[type='search'],
+	input[type='tel'],
+	input[type='url'],
+	input[type='date'],
+	input[type='datetime-local'],
+	input[type='month'],
+	input[type='week'],
+	input[type='time'],
+	input[type='color'],
+	select,
+	select[multiple],
+	textarea {
+		@apply border-gray-300 rounded-md;
+	}
+
+	input[type='checkbox'] {
+		@apply rounded-sm;
+	}
+	input[type='checkbox']:checked {
+		@apply rounded border-gray-300 text-indigo-600 shadow-sm;
+	}
+
+	input[type='radio']:checked {
+		@apply border-gray-300 text-indigo-600 shadow-sm;
+	}
+
+	input[type='text']:focus,
+	input[type='password']:focus,
+	input[type='email']:focus,
+	input[type='number']:focus,
+	input[type='search']:focus,
+	input[type='tel']:focus,
+	input[type='url']:focus,
+	input[type='date']:focus,
+	input[type='datetime-local']:focus,
+	input[type='month']:focus,
+	input[type='week']:focus,
+	input[type='time']:focus,
+	input[type='color']:focus,
+	input[type='radio']:focus,
+	input[type='checkbox']:focus,
+	select:focus,
+	select[multiple]:focus,
+	textarea:focus {
+		@apply border-indigo-300 ring ring-offset-0 ring-indigo-200 ring-opacity-50;
+	}
+}
