--- a/E_django_ClassViews/static/src/input.css
+++ b/E_django_ClassViews/static/src/input.css
@@ -19,7 +19,7 @@
 	select,
 	select[multiple],
 	textarea {
-		@apply border-gray-300 rounded-md;
+		@apply border-gray-300 rounded-md w-full text-black;
 	}
 
 	input[type='checkbox'] {
