--- a/E_django_ClassViews/templates/app/todo_list.html
+++ b/E_django_ClassViews/templates/app/todo_list.html
@@ -1,117 +1,157 @@
 {% extends "_base.html" %}
+{% load widget_tweaks %}
 {% block content %}
     <main class="flex flex-col items-center justify-center min-h-screen">
         <div class="w-1/3">
             <div class="w-full">
-                <table class="table">
-                    <!-- head -->
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>Task</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for object in object_list %}
+                <!-- <form method="get" class="flex space-x-2">
+                    {% for field in form %}<div class="w-40">{{ field }}</div>{% endfor %}
+                    <button type="submit" class="px-2 py-1 bg-indigo-500 text-white rounded hover:bg-indigo-600">Filter</button>
+                    <button type="button" class="px-2 py-1 bg-gray-500 text-white rounded hover:bg-gray-600" onclick="window.location.href = '{% url 'todo-list' %}'">Clear</button>
+                </form> -->
+                <form id="filter-form"
+                      hx-get="{% url 'todo-list' %}"
+                      hx-target="#todo-list"
+                      hx-trigger="keyup changed delay:250ms from:#search, change from:#filter, change from:#paginate_by"
+                      hx-push-url="true"
+                      class="flex space-x-2"
+                      autocomplete="off">
+                    <!-- Search input -->
+                    <input type="text"
+                           name="search"
+                           id="search"
+                           class="px-2 py-1 border border-gray-700 rounded"
+                           placeholder="Search"
+                           {% if search %}value="{{ search }}"{% endif %}>
+                    <!-- Filter select -->
+                    <select name="filter"
+                            id="filter"
+                            class="px-2 py-1 border border-gray-700 rounded">
+                        <option disabled value="" {% if filter == None %}selected{% endif %}>Filter by status</option>
+                        {% for option in search_options %}
+                            <option value="{{ option }}" {% if filter == option %}selected{% endif %}>{{ option|title }}</option>
+                        {% endfor %}
+                    </select>
+                    <!-- Paginate by select -->
+                    <select name="paginate_by"
+                            id="paginate_by"
+                            class="px-2 py-1 border border-gray-700 rounded">
+                        <option disabled value="" {% if paginate_by == None %}selected{% endif %}>Paginate by</option>
+                        {% for option in paginate_by_options %}
+                            <option value="{{ option }}"
+                                    {% if paginate_by == option %}selected{% endif %}>{{ option }}</option>
+                        {% endfor %}
+                    </select>
+                    <a href="{% url 'todo-list' %}"
+                       class="items-start w-1/3 justify-items-start underline">Refresh</a>
+                </form>
+                <div id="todo-list">
+                    <table class="table">
+                        <!-- head -->
+                        <thead>
                             <tr>
-                                <td>{{ forloop.counter }}</td>
+                                <th></th>
+                                <th>Task</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for object in object_list %}
+                                <tr>
+                                    <td>{{ forloop.counter }}</td>
+                                    <td>
+                                        {% if object.complete == True %}
+                                            <strike>{{ object.title }}</strike>
+                                        {% else %}
+                                            <span>{{ object.title }}</span>
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        <div class="flex space-x-2">
+                                            <a class="btn btn-sm btn-info" href="{% url 'todo-detail' object.id %}">View</a>
+                                            <a class="btn btn-sm btn-warning"
+                                               href="{% url 'todo-update' object.id %}">Update</a>
+                                            <a class="btn btn-sm btn-error btn-outline"
+                                               href="{% url 'todo-delete' object.id %}">Delete</a>
+                                        </div>
+                                    </td>
+                                </tr>
+                            {% empty %}
+                                <tr>
+                                    <td></td>
+                                    <td>No objects yet.</td>
+                                    <td></td>
+                                </tr>
+                            {% endfor %}
+                            <tr>
+                                <td></td>
+                                <td></td>
                                 <td>
-                                    {% if object.complete == True %}
-                                        <strike>{{ object.title }}</strike>
-                                    {% else %}
-                                        <span>{{ object.title }}</span>
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    <div class="flex space-x-2">
-                                        <a class="btn btn-sm btn-info" href="{% url 'todo-detail' object.id %}">View</a>
-                                        <a class="btn btn-sm btn-warning"
-                                           href="{% url 'todo-update' object.id %}">Update</a>
-                                        <a class="btn btn-sm btn-error btn-outline"
-                                           href="{% url 'todo-delete' object.id %}">Delete</a>
+                                    <div>
+                                        <a class="btn btn-sm btn-primary" href="{% url 'todo-create' %}">Add +</a>
                                     </div>
                                 </td>
                             </tr>
-                        {% empty %}
-                            <tr>
-                                <td></td>
-                                <td>No objects yet.</td>
-                                <td></td>
-                            </tr>
-                        {% endfor %}
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td>
-                                <div>
-                                    <a class="btn btn-sm btn-primary" href="{% url 'todo-create' %}">Add +</a>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                        </tbody>
+                    </table>
+                    <!-- pagination starts -->
+                    <nav class="pt-4 w-full">
+                        <ul class="flex justify-end w-full space-x-2">
+                            {% if page_obj.has_previous %}
+                                <li class="border border-gray-500 flex item-center justify-center">
+                                    <a class="text-blue-500 py-2 px-3 cursor-pointer"
+                                       href="{{ request.path }}?page={{ page_obj.previous_page_number }}">Prev.</a>
+                                </li>
+                            {% endif %}
+                            {% if page_obj.number > 3 %}
+                                <li class="border border-gray-500 flex item-center justify-center">
+                                    <a class="text-blue-500 py-2 px-3 cursor-pointer"
+                                       href="{{ request.path }}?page=1">1</a>
+                                </li>
+                            {% endif %}
+                            {% if page_obj.number > 4 %}
+                                <li class="border border-gray-500 flex item-center justify-center">
+                                    <span class="text-blue-500 py-2 px-3 cursor-pointer">....</span>
+                                </li>
+                            {% endif %}
+                            {% for i in page_obj.paginator.page_range %}
+                                {% if page_obj.number == i %}
+                                    <li class="border border-gray-500 flex item-center justify-center bg-white text-black py-2 px-3">
+                                        {{ i }}
+                                        <!-- <span class="sr-only"></span> -->
+                                    </li>
+                                {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
+                                    <li class="border border-gray-500 flex item-center justify-center">
+                                        <a class="text-blue-500 py-2 px-3 cursor-pointer"
+                                           href="{{ request.path }}?page={{ i }}">{{ i }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                            {% if page_obj.has_next %}
+                                {% if page_obj.number < page_obj.paginator.num_pages|add:'-3' %}
+                                    <li class="border border-gray-500 flex item-center justify-center">
+                                        <span class="text-blue-500 py-2 px-3 cursor-pointer">....</span>
+                                    </li>
+                                    <li class="border border-gray-500 flex item-center justify-center">
+                                        <a class="text-blue-500 py-2 px-3 cursor-pointer"
+                                           href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+                                    </li>
+                                {% elif page_obj.number < page_obj.paginator.num_pages|add:'-2' %}
+                                    <li class="border border-gray-500 flex item-center justify-center">
+                                        <a class="text-blue-500 py-2 px-3 cursor-pointer"
+                                           href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+                                    </li>
+                                {% endif %}
+                                <li class="border border-gray-500 flex item-center justify-center">
+                                    <a class="text-blue-500 py-2 px-3 cursor-pointer"
+                                       href="?page={{ page_obj.next_page_number }}">Next</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
+                    <!-- pagination end -->
+                </div>
             </div>
-            <!-- pagination starts -->
-            <nav class="pt-4 w-full">
-                <ul class="flex justify-end w-full">
-                    <li class="disabled">
-                        {% if page_obj.has_previous %}
-                            <li class="border border-gray-500">
-                                <a class="text-blue-500 py-2 px-3 cursor-pointer"
-                                   href="{{ request.path }}?page={{ page_obj.previous_page_number }}">Prev.</a>
-                            </li>
-                        {% endif %}
-                        {% if page_obj.number > 3 %}
-                            <li class="border border-gray-500">
-                                <a class="text-blue-500 py-2 px-3 cursor-pointer"
-                                   href="{{ request.path }}?page=1">1</a>
-                            </li>
-                        {% endif %}
-                        {% if page_obj.number > 4 %}
-                            <li class="border border-gray-500">
-                                <span class="text-blue-500 py-2 px-3 cursor-pointer">....</span>
-                            </li>
-                        {% endif %}
-                    </li>
-                    {% for i in page_obj.paginator.page_range %}
-                        {% if page_obj.number == i %}
-                            <li class="border border-gray-500 bg-white ">
-                                <span class="text-black py-2 px-3">
-                                    {{ i }}
-                                    <span class="sr-only"></span>
-                                </span>
-                            </li>
-                        {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
-                            <li class="border border-gray-500">
-                                <a class="text-blue-500 py-2 px-3 cursor-pointer"
-                                   href="{{ request.path }}?page={{ i }}">{{ i }}</a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                    {% if page_obj.has_next %}
-                        {% if page_obj.number < page_obj.paginator.num_pages|add:'-3' %}
-                            <li class="border border-gray-500">
-                                <span class="text-blue-500 py-2 px-3 cursor-pointer">....</span>
-                            </li>
-                            <li class="border border-gray-500">
-                                <a class="text-blue-500 py-2 px-3 cursor-pointer"
-                                   href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
-                            </li>
-                        {% elif page_obj.number < page_obj.paginator.num_pages|add:'-2' %}
-                            <li class="border border-gray-500">
-                                <a class="text-blue-500 py-2 px-3 cursor-pointer"
-                                   href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
-                            </li>
-                        {% endif %}
-                        <li class="border border-gray-500">
-                            <a class="text-blue-500 py-2 px-3 cursor-pointer"
-                               href="?page={{ page_obj.next_page_number }}">Next</a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </nav>
-            <!-- pagination end -->
         </div>
     </main>
 {% endblock content %}
