--- a/E_django_ClassViews/templates/app/todo_list_table.html
+++ b/E_django_ClassViews/templates/app/todo_list_table.html
@@ -20,11 +20,11 @@
                 </td>
                 <td>
                     <div class="flex space-x-2">
-                        <button class="btn btn-sm btn-info" href="{% url 'todo-detail' object.id %}">View</button>
-                        <button class="btn btn-sm btn-warning"
-                                href="{% url 'todo-update' object.id %}">Update</button>
-                        <button class="btn btn-sm btn-error btn-outline"
-                                href="{% url 'todo-delete' object.id %}">Delete</button>
+                        <a class="btn btn-sm btn-info" href="{% url 'todo-detail' object.id %}">View</a>
+                        <a class="btn btn-sm btn-warning"
+                           href="{% url 'todo-update' object.id %}">Update</a>
+                        <a class="btn btn-sm btn-error btn-outline"
+                           href="{% url 'todo-delete' object.id %}">Delete</a>
                     </div>
                 </td>
             </tr>
@@ -40,7 +40,7 @@
             <td></td>
             <td>
                 <div>
-                    <button class="btn btn-sm btn-primary" href="{% url 'todo-create' %}">Add +</button>
+                    <a class="btn btn-sm btn-primary" href="{% url 'todo-create' %}">Add +</a>
                 </div>
             </td>
         </tr>
