--- a/E_django_ClassViews/static/src/input.css
+++ b/E_django_ClassViews/static/src/input.css
@@ -19,7 +19,7 @@
 	select,
 	select[multiple],
 	textarea {
-		@apply border-gray-300 rounded-md w-full text-black;
+		@apply border-gray-300 rounded-md w-full;
 	}
 
 	input[type='checkbox'] {
@@ -31,6 +31,10 @@
 
 	input[type='radio']:checked {
 		@apply border-gray-300 text-indigo-600 shadow-sm;
+	}
+
+	input[type='file'] {
+		@apply mt-1 block w-full border border-gray-200 shadow-sm rounded-lg text-sm  focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none file:border-0 file:bg-gray-300 file:me-4 file:py-3 file:px-4 file:font-semibold;
 	}
 
 	input[type='text']:focus,
