--- a/E_django_ClassViews/templates/app/todo_detail.html
+++ b/E_django_ClassViews/templates/app/todo_detail.html
@@ -1,6 +1,7 @@
 {% extends "_base.html" %}
 {% block content %}
     <main class="flex flex-col items-center min-h-screen">
+        <a href="{% url 'todo-list' %}" class="underline text-indigo-500 mb-10">Back to list</a>
         {% include "partials/messages.html" %}
         {% if object.complete == True %}
             <h2 class="text-2xl font-bold">
@@ -9,11 +10,15 @@
         {% else %}
             <h2 class="text-2xl font-bold">{{ object.title }}</h2>
         {% endif %}
-        <a href="{% url 'todo-list' %}" class="underline text-indigo-500">Back to list</a>
+        <!-- Render all images related to the Todo -->
+        <!-- Render all related photos in a grid -->
+        <div id="image-grid" class="my-4">{% include 'app/image_grid.html' with object=object %}</div>
         <form method="post"
-              class="flex flex-col space-y-2 w-1/3"
-              enctype="multipart/form-data">
+              class="flex flex-col items-center space-y-2 w-1/3 p-4 border shadow"
+              enctype="multipart/form-data"
+              autocomplete="off">
             {% csrf_token %}
+            <h1 class="text-xl font-bold">Add Images:</h1>
             {% for field in form %}
                 {% if field.field.widget.input_type == 'checkbox' %}
                     <div class="flex flex-row items-center space-x-2">
@@ -25,7 +30,6 @@
                         {{ field.label_tag }}
                         {{ field }}
                     </div>
-
                 {% endif %}
                 <div class="text-red-500">{{ field.errors }}</div>
             {% endfor %}
