--- a/01_templates/templates/_base.html
+++ b/01_templates/templates/_base.html
@@ -19,6 +19,14 @@
             <script type="text/javascript" src="{% static 'src/htmx.js' %}"></script>
         {% endcompress %}
         <!-- HTMX end-->
+        <!-- fontawasome -->
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        <!-- font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap"
+              rel="stylesheet">
     </head>
     <body {% if request.session.is_dark_mode %}class="dark"{% endif %}>
         {% include 'layout/navbar.html' %}
