--- a/G_htmx/templates/layout/navbar.html
+++ b/G_htmx/templates/layout/navbar.html
@@ -2,7 +2,8 @@
     <nav class="relative max-w-7xl w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8"
          aria-label="Global">
         <div class="flex items-center justify-between">
-            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <a href=" {% url 'index' %}"
+               class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="https://flowbite.com/docs/images/logo.svg"
                      class="h-8"
                      alt="Flowbite Logo">
