--- a/G_htmx/templates/product/productlist/product_item_partial.html
+++ b/G_htmx/templates/product/productlist/product_item_partial.html
@@ -1,4 +1,4 @@
-{% for product in object_list %}
+{% for product in page_obj %}
     <div class="rounded-lg shadow-md p-6 dark:bg-gray-800">
         <h2 class="text-sm font-semibold mb-2 dark:text-white">{{ product }}</h2>
         <p class="text-gray-700 dark:text-gray-400">{{ product.description }}</p>
@@ -6,6 +6,9 @@
         <p class="text-gray-700 dark:text-gray-400">Stock: {{ product.stock }}</p>
     </div>
 {% endfor %}
+<p class="text-xs text-gray-700 dark:text-gray-300">Total Products: {{ page_obj.paginator.count }}</p>
+<!-- Paginate -->
+{% include 'pagination/htmx_pagination.html' %}
 <div id="dynamic_filter" hx-swap-oob="true">
     {% for option_dict in options %}
         <fieldset>
