--- a/H_channels/templates/chat/partials/ws_response.html
+++ b/H_channels/templates/chat/partials/ws_response.html
@@ -1,5 +1,5 @@
 <div hx-swap-oob="beforeend:#content">
-    <div class="flex w-full mt-2 space-x-3 max-w-xs ml-auto justify-end">
+    <div class="flex w-full mt-2 space-x-3 max-w-md ml-auto justify-end">
         <div>
             <div class="bg-blue-600 text-white p-3 rounded-l-lg rounded-br-lg">
                 <p class="text-sm">{{ message|linebreaksbr|safe }}</p>
