--- a/I_celery/templates/_base.html
+++ b/I_celery/templates/_base.html
@@ -18,6 +18,8 @@
         {% compress js %}
             <script type="text/javascript" src="{% static 'src/htmx.js' %}"></script>
         {% endcompress %}
+        <!-- websocket extension -->
+        <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
         <!-- HTMX end-->
         <!-- fontawasome -->
         <link rel="stylesheet"
