--- a/I_celery/templates/index.html
+++ b/I_celery/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "_base.html" %}
 {% block content %}
     <main class="flex flex-col items-center justify-center min-h-screen dark:bg-gray-900">
-        <h1 class="text-3xl text-gray-800 dark:text-gray-200 font-bold">Django + Tailwind CSS + HTMX + others.</h1>
+        <div hx-ext="ws" ws-connect="/ws/status">
+            Current Status: <span id="status"></span>
+        </div>
     </main>
 {% endblock content %}
